[gd_scene load_steps=9 format=2]

[ext_resource path="res://atlas-export.png" type="Texture" id=1]
[ext_resource path="res://Car.gd" type="Script" id=2]
[ext_resource path="res://fire.tres" type="Texture" id=3]
[ext_resource path="res://font.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28.4067, 23.3638 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 15 )

[sub_resource type="CircleShape2D" id=4]
radius = 37.2311

[node name="Vehicle" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 48, 22, 32 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MountArea" type="Area2D" parent="."]
collision_layer = 0

[node name="Shape" type="CollisionShape2D" parent="MountArea"]
shape = SubResource( 2 )

[node name="LeavePosition" type="Position2D" parent="."]
position = Vector2( 6.98775, -16.9725 )

[node name="DeathArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
shape = SubResource( 3 )

[node name="FireSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 9, 0 )
rotation = -1.5708
texture = ExtResource( 3 )

[node name="DeathCounterLabel" type="Label" parent="."]
margin_left = 17.0
margin_top = -24.0
margin_right = 28.0
margin_bottom = -12.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathCounter" type="Timer" parent="."]

[node name="ExplodeArea" type="Area2D" parent="."]
visible = false

[node name="Shape" type="CollisionShape2D" parent="ExplodeArea"]
shape = SubResource( 4 )

[connection signal="body_entered" from="MountArea" to="." method="onPlayerEnterMountArea"]
[connection signal="body_exited" from="MountArea" to="." method="onPlayerExitMountArea"]
[connection signal="body_entered" from="DeathArea" to="." method="_on_DeathArea_body_entered"]
[connection signal="timeout" from="DeathCounter" to="." method="_on_DeathCounter_timeout"]
